Fix css animations and other minors css vals

--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -41,7 +41,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">ENTRÉES</h2>
-        <article class="card">
+        <article class="card fade-1">
             <hgroup>
                 <h2 class="menu-title">Ravioles de foie gras</h2>
                 <h3>Accompagnés de leur crème à la truffe</h3>
@@ -54,7 +54,7 @@
             </div>
 
         </article>
-        <article class="card">
+        <article class="card fade-2">
             <hgroup>
                 <h2 class="menu-title">Caviar osciétre</h2>
                 <h3>Sur blini à la farine de blé noir</h3>
@@ -66,7 +66,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-3">
             <hgroup>
                 <h2 class="menu-title">Homard et espuma de...</h2>
                 <h3>Mariné aux zests d'orange</h3>
@@ -79,7 +79,7 @@
             </div>
 
         </article>
-        <article class="card">
+        <article class="card fade-4">
             <hgroup>
                 <h2 class="menu-title">Foie gras de canard cuit entier</h2>
                 <h3>Confiture de figue et pain toasté</h3>
@@ -97,7 +97,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">PLATS</h2>
-        <article class="card">
+        <article class="card fade-5">
             <hgroup>
                 <h2 class="menu-title">Noix de coquilles Saint-Jacques</h2>
                 <h3>Sur son lit de purée de céleri-rave</h3>
@@ -109,7 +109,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-6">
             <hgroup>
                 <h2 class="menu-title">Langoustine poêlée</h2>
                 <h3>Purée de patate douce</h3>
@@ -121,7 +121,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-7">
             <hgroup>
                 <h2 class="menu-title">Mijoté de queue de boeuf</h2>
                 <h3>Et riz sauvage aux zests de citron</h3>
@@ -137,7 +137,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">DESSERT</h2>
-        <article class="card">
+        <article class="card fade-8">
             <hgroup>
                 <h2 class="menu-title">Macaron noisette et chocolat</h2>
                 <h3>Glace au caramel brun et sel de Guérande</h3>
@@ -149,7 +149,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-9">
             <hgroup>
                 <h2 class="menu-title">Baba au rhum revisité</h2>
                 <h3>Avec son coulis de citron</h3>
@@ -161,7 +161,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-10">
             <hgroup>
                 <h2 class="menu-title">Tarte au citron meringuée</h2>
                 <h3>Destructurée</h3>
