--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link href="assets/css/animations.css" rel="stylesheet"/>
     <link href="assets/css/media.css" rel="stylesheet"/>
 
-    <title>Bienvenue sur la page d'acceuil | Ohmyfood</title>
+    <title>Bienvenue chez Ohmyfood</title>
+    <meta name="description" content="Découvrez des restaurants d'exception, séléctionnés par nos soins et Réservez le menu qui vous convient"/>
 
 </head>
 <body>
@@ -37,7 +38,7 @@
 </header>
 
 <main>
-    <section class="bg-grey reserve">
+    <section class="bg-grey reserve fade-1">
         <hgroup>
             <h1>Réservez le menu qui vous convient</h1>
             <h2> Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
@@ -47,19 +48,19 @@
         </a>
     </section>
     <aside class="menu-step">
-        <h1>Fonctionnement</h1>
+        <h1 class="fade-1">Fonctionnement</h1>
         <div class="select">
-            <a class="step-button" href="#">
+            <a class="step-button fade-2" href="#">
                 <span class="circle-number">1</span>
                 <span class="icon"><i class="fas fa-mobile-alt"></i></span><span
                     class="link-text">Choisissez un restaurant</span>
             </a>
-            <a class="step-button" href="#">
+            <a class="step-button fade-2" href="#">
                 <span class="circle-number">2</span>
                 <span class="icon"><i class="fas fa-list-ul"></i></span><span
                     class="link-text">Composez votre menu</span>
             </a>
-            <a class="step-button active" href="#">
+            <a class="step-button fade-3" href="#">
                 <span class="circle-number">3</span>
                 <span class="icon"><i class="fas fa-store"></i></span><span
                     class="link-text">Dégustez au retaurant</span>
@@ -67,11 +68,11 @@
         </div>
     </aside>
     <section>
-        <div class="cards">
+        <div class="cards fade-4">
             <h1 class="restaurants">Restaurants</h1>
-            <article class="card card-img">
+            <article class="card card-img fade-5">
                 <div class="card-img-header">
-                    <img alt="restaurants" class="card-img-top"
+                    <img alt="La palette du goût" class="card-img-top"
                          src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
                     <label class="img-btn-left">Nouveau</label>
                 </div>
@@ -87,9 +88,9 @@
                 </header>
             </article>
 
-            <article class="card card-img">
+            <article class="card card-img fade-6">
                 <div class="card-img-header">
-                    <img alt="restaurants" class="card-img-top"
+                    <img alt="La note enchantée" class="card-img-top"
                          src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
                     <label class="img-btn-left">Nouveau</label>
                 </div>
@@ -105,9 +106,9 @@
                 </header>
             </article>
 
-            <article class="card card-img">
+            <article class="card card-img fade-7">
                 <div class="card-img-header">
-                    <img alt="restaurants" class="card-img-top"
+                    <img alt="À la française" class="card-img-top"
                          src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
                 </div>
                 <header class="card-content">
@@ -122,9 +123,9 @@
                 </header>
             </article>
 
-            <article class="card card-img">
+            <article class="card card-img fade-8">
                 <div class="card-img-header">
-                    <img alt="restaurants" class="card-img-top"
+                    <img alt="Le délice des sens" class="card-img-top"
                          src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                 </div>
                 <header class="card-content">
@@ -142,7 +143,7 @@
     </section>
 </main>
 <footer>
-    <div id="footer">
+    <div id="footer" class="fade-9">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
         </div>
