Fix css and html fade class * Css hgroup media device * Add focus reset class * Change btn shadow * Add home class in body (home page)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Découvrez des restaurants d'exception, séléctionnés par nos soins et Réservez le menu qui vous convient"/>
 
 </head>
-<body>
+<body class="home">
 <!--Header-->
 <header>
     <div class="logo">
