--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -41,7 +41,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">ENTRÉES</h2>
-        <article class="card">
+        <article class="card fade-1">
             <hgroup>
                 <h2 class="menu-title">Fricassée d'escargot</h2>
                 <h3>Au piment d'espelette</h3>
@@ -54,7 +54,7 @@
             </div>
 
         </article>
-        <article class="card">
+        <article class="card fade-2">
             <hgroup>
                 <h2 class="menu-title">Foie gras de canard mi-cuit</h2>
                 <h3>Et ses copeaux de truffe noire</h3>
@@ -66,7 +66,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-3">
             <hgroup>
                 <h2 class="menu-title">Oeuf au plat</h2>
                 <h3>Assaisonné à la truffe sur lit de...</h3>
@@ -84,7 +84,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">PLATS</h2>
-        <article class="card">
+        <article class="card fade-5">
             <hgroup>
                 <h2 class="menu-title">Filet de boeuf aux herbes</h2>
                 <h3>Accompagné de sa ribambelle de légumes</h3>
@@ -96,7 +96,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-6">
             <hgroup>
                 <h2 class="menu-title">Parmantier de queue de boeuf</h2>
                 <h3>À la truffe noire sur sa purée de panais</h3>
@@ -108,7 +108,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-7">
             <hgroup>
                 <h2 class="menu-title">Filet de Turbot</h2>
                 <h3>Aux agrumes</h3>
@@ -124,7 +124,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">DESSERT</h2>
-        <article class="card">
+        <article class="card fade-8">
             <hgroup>
                 <h2 class="menu-title">Paris-Brest</h2>
                 <h3>Revisité</h3>
@@ -136,7 +136,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-9">
             <hgroup>
                 <h2 class="menu-title">Macaron au chocolat d'exception</h2>
                 <h3>Et grace à la vanille de Madagascar</h3>
@@ -148,7 +148,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-10">
             <hgroup>
                 <h2 class="menu-title">Mousse au chocolat</h2>
                 <h3>Au piment d'espelette et à la truffe noire</h3>
@@ -162,14 +162,14 @@
         </article>
     </section>
 
-    <aside class="full-width order">
+    <aside class="full-width order fade-11">
         <a class="show-btn button1" href="#">
             Commander
         </a>
     </aside>
 </main>
 <footer>
-    <div id="footer">
+    <div id="footer" class="fade-12">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
         </div>
