--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -41,7 +41,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">ENTRÉES</h2>
-        <article class="card">
+        <article class="card fade-1">
             <hgroup>
                 <h2 class="menu-title">Tartare de thon</h2>
                 <h3>Assaisonné au yuzu</h3>
@@ -54,7 +54,7 @@
             </div>
 
         </article>
-        <article class="card">
+        <article class="card fade-2">
             <hgroup>
                 <h2 class="menu-title">Bouchée de homard croustillant</h2>
                 <h3>Et sa farandole de petits légumes</h3>
@@ -66,7 +66,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-3">
             <hgroup>
                 <h2 class="menu-title">Velouté de cèpes</h2>
                 <h3>Aux truffes</h3>
@@ -84,7 +84,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">PLATS</h2>
-        <article class="card">
+        <article class="card fade-4">
             <hgroup>
                 <h2 class="menu-title">Poulet rôti aux herbes de provence</h2>
                 <h3>Et sa crème de truffe</h3>
@@ -96,7 +96,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-5">
             <hgroup>
                 <h2 class="menu-title">Langouste rôtie</h2>
                 <h3>Et ses légumes de saison</h3>
@@ -108,7 +108,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-6">
             <hgroup>
                 <h2 class="menu-title">Côte de boeuf angus</h2>
                 <h3>Et sa purée de panais</h3>
@@ -124,7 +124,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">DESSERT</h2>
-        <article class="card">
+        <article class="card fade-7">
             <hgroup>
                 <h2 class="menu-title">Farandole de desserts</h2>
                 <h3>Du chef</h3>
@@ -136,7 +136,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-8">
             <hgroup>
                 <h2 class="menu-title">Crème brulée</h2>
                 <h3>Revisité</h3>
@@ -148,7 +148,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-9">
             <hgroup>
                 <h2 class="menu-title">Tiramisu</h2>
                 <h3>À la noisette</h3>
@@ -162,14 +162,14 @@
         </article>
     </section>
 
-    <aside class="full-width order">
+    <aside class="full-width order fade-10">
         <a class="show-btn button1" href="#">
             Commander
         </a>
     </aside>
 </main>
 <footer>
-    <div id="footer">
+    <div id="footer" class="fade-11">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
         </div>
