--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -41,7 +41,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">ENTRÉES</h2>
-        <article class="card">
+        <article class="card fade-1">
             <hgroup>
                 <h2 class="menu-title">Tartare de poulpe acidulé</h2>
                 <h3>Aux zestes d'orange</h3>
@@ -54,7 +54,7 @@
             </div>
 
         </article>
-        <article class="card">
+        <article class="card fade-2">
             <hgroup>
                 <h2 class="menu-title">Velouté de légumes d'antan</h2>
                 <h3>Carotte, panais, topinambour</h3>
@@ -66,7 +66,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-3">
             <hgroup>
                 <h2 class="menu-title">Soupe à l'oignon</h2>
                 <h3>Revisitée</h3>
@@ -84,7 +84,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">PLATS</h2>
-        <article class="card">
+        <article class="card fade-4">
             <hgroup>
                 <h2 class="menu-title">Coquilles Saint-Jacques</h2>
                 <h3>Accompagnées d'une purée de panais</h3>
@@ -96,7 +96,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-5">
             <hgroup>
                 <h2 class="menu-title">Magret de canard</h2>
                 <h3>Et parmentier de pommes de terre</h3>
@@ -108,7 +108,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-6">
             <hgroup>
                 <h2 class="menu-title">Pigeonneau d'Ille-et-Vilaine</h2>
                 <h3>Sur son lit de gnocchis aux légumes</h3>
@@ -124,7 +124,7 @@
 
     <section class="full-width cards">
         <h2 class="sub-title">DESSERT</h2>
-        <article class="card">
+        <article class="card fade-7">
             <hgroup>
                 <h2 class="menu-title">Pétales de violettes glacés</h2>
                 <h3>Et purée de noisettes</h3>
@@ -136,7 +136,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-8">
             <hgroup>
                 <h2 class="menu-title">Fondant au chocolat</h2>
                 <h3>Revisité</h3>
@@ -148,7 +148,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
         </article>
-        <article class="card">
+        <article class="card fade-9">
             <hgroup>
                 <h2 class="menu-title">Millefeuille croustillant</h2>
                 <h3>Mirtilles et pâte d'amande</h3>
@@ -162,14 +162,14 @@
         </article>
     </section>
 
-    <aside class="full-width order">
+    <aside class="full-width order fade-10">
         <a class="show-btn button1" href="#">
             Commander
         </a>
     </aside>
 </main>
 <footer>
-    <div id="footer">
+    <div id="footer" class="fade-11">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
         </div>
