--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -175,14 +175,14 @@
         </article>
     </section>
 
-    <aside class="full-width order">
+    <aside class="full-width order fade-11">
         <a class="show-btn button1" href="#">
             Commander
         </a>
     </aside>
 </main>
 <footer>
-    <div id="footer">
+    <div id="footer" class="fade-12">
         <div class="logo">
             <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
         </div>
