Cleanup code and structure scss files

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Shrikhand&display=swap"
           rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/animations.css" rel="stylesheet"/>
-    <link href="assets/css/media.css" rel="stylesheet"/>
+    <link href="assets/css/media.css" media="screen and (max-width : 1024px)"  rel="stylesheet"/>
 
+    <!--    Meta title-->
     <title>La palette du goût restaurant | Ohmyfood</title>
+    <meta name="title" content="La palette du goût restaurant | Ohmyfood">
+    <meta name="description" content="Découvrez La palette du goût restaurant, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient"/>
+
+    <!--    Og Graph-->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ohmyfood.com/la_palette_du_gout">
+    <meta property="og:site_name" content="Ohmyfood" />
+    <meta property="og:title" content="La palette du goût restaurant | Ohmyfood">
+    <meta property="og:description" content="Découvrez La palette du goût restaurant, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient"/>
+    <meta property="og:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.ohmyfood.com/">
+    <meta property="twitter:title" content="La palette du goût restaurant | Ohmyfood">
+    <meta property="twitter:description" content="Découvrez La palette du goût restaurant, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient">
+    <meta property="twitter:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+
 </head>
 <body class="menu">
 <!--Header-->
@@ -171,7 +186,7 @@
 <footer>
     <div id="footer" class="fade-12">
         <div class="logo">
-            <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
+            <img alt="footer logo" src="assets/images/logo/ohmyfood.png">
         </div>
         <div class="col-3">
             <ul class="one footer-icon">
