--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Shrikhand&display=swap"
           rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/animations.css" rel="stylesheet"/>
-    <link href="assets/css/media.css" rel="stylesheet"/>
+    <link href="assets/css/media.css" media="screen and (max-width : 1024px)" rel="stylesheet"/>
 
+    <!--    Meta title-->
     <title>Le délice des sens restaurant | Ohmyfood</title>
+    <meta name="title" content="Le délice des sens restaurant | Ohmyfood">
+    <meta name="description"
+          content="Découvrez Le délice des sens restaurant, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient"/>
+
+    <!--    Og Graph-->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ohmyfood.com/le_delice_des_sens">
+    <meta property="og:site_name" content="Ohmyfood"/>
+    <meta property="og:title" content="Le délice des sens restaurant | Ohmyfood">
+    <meta property="og:description"
+          content="Découvrez Le délice des sens restaurant, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient"/>
+    <meta property="og:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.ohmyfood.com/le_delice_des_sens">
+    <meta property="twitter:title" content="Le délice des sens restaurant | Ohmyfood">
+    <meta property="twitter:description"
+          content="Découvrez Le délice des sens restaurant, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient">
+    <meta property="twitter:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+
 </head>
 <body class="menu">
-<!--Header-->
 <header>
     <a href="index.html" class="back-btn">
         <i class="fas fa-arrow-left"></i>
@@ -26,7 +43,8 @@
         <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
     </div>
     <div class="cover-img">
-        <img alt="Le délice des sens restaurant" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+        <img alt="Le délice des sens restaurant"
+             src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
     </div>
 </header>
 
@@ -171,7 +189,7 @@
 <footer>
     <div id="footer" class="fade-11">
         <div class="logo">
-            <img alt="filter applied" src="assets/images/logo/ohmyfood.png">
+            <img alt="footer logo" src="assets/images/logo/ohmyfood.png">
         </div>
         <div class="col-3">
             <ul class="one footer-icon">
